--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".subWeightActivity"></activity>
+        <activity android:name=".NotiActivity"></activity>
+        <activity android:name=".subWeightActivity" />
         <activity android:name=".subWaterActivity" />
         <activity android:name=".subBloodActivity" />
         <activity android:name=".subCaloActivity" />
@@ -24,6 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".AlertReceiver" />
     </application>
 
 </manifest>
